# my_game

RPGGame/: CMakeLists.txt  ability.cpp  buff.cpp  corestats.cpp  item.cpp  itemFactory.cpp  main.cpp  playerCharacter.cpp  pointwell.cpp  statblock.cpp
RPGGame/headers/: ability.h  buff.h  corestats.h  item.h  itemFactory.h  playerCharacter.h  pointwell.h  statblock.h  types.h
